--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL="http://localhost:1337"
-#REACT_APP_API_URL="https://lpb-cms.herokuapp.com"
+#REACT_APP_API_URL="http://localhost:1337"
+REACT_APP_API_URL="https://lpb-cms.herokuapp.com"
