Update favicon + change data presence verification for dara array get on CMS

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Restaurant Le P'tit Bistrot - Saint Montan - Ardeche",
   "icons": [
     {
-      "src": "assets/favicon-32x32.png",
+      "src": "favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/x-icon"
     }
